# pose-estimation

./: .clang-format  CMakeLists.txt  Dockerfile.amd64  README.md  cfsd-state-estimation.xml  docker-compose.yml
benchmark/bundleAdjustment/: CMakeLists.txt  bundleAdjustment.cpp  cfsd.yml
benchmark/cvAlgorithms/: CMakeLists.txt  cvAlgorithms.cpp
benchmark/cvRectify/: CMakeLists.txt  cvRectify.cpp  kitti.yml
benchmark/dataTrigger/: CMakeLists.txt  dataTrigger.cpp
benchmark/preintegration/: CMakeLists.txt  preintegrate.cpp
config/: cfsd.yml  config.yml  euroc.yml  kitti.yml  parameters.yml
include/: ORBextractor.h  gms_matcher.h
include/cfsd/: camera-frame.hpp  camera-model.hpp  common.hpp  config.hpp  cost-functions.hpp  drawer.hpp  feature-tracker.hpp  frame.hpp  image-reader.hpp  imu-frame.hpp  imu-preintegrator.hpp  initializer.hpp  key-frame.hpp  loop-closure.hpp  map.hpp  optimizer.hpp  structs.hpp  viewer.hpp  visual-inertial-odometry.hpp  visual-inertial-slam.hpp
src/: camera-frame.cpp  cfsd-state-estimation.cpp  config.cpp  euroc-state-estimation.cpp  feature-tracker.cpp  frame.cpp  image-reader.cpp  imu-preintegrator.cpp  initializer.cpp  key-frame.cpp  kitti-state-estimation.cpp  loop-closure.cpp  map.cpp  optimizer.cpp  state-estimation.cpp  test.cpp  viewer.cpp  visual-inertial-odometry.cpp  visual-inertial-slam.cpp
test/: vio-test.cpp
tools/: generateCameraParams.m  initApproaches.cpp  matlab2opencv.m  parameters.yml
tools/cluonRecordingsToLocal/: CMakeLists.txt
tools/cluonRecordingsToLocal/src/: cluonRecordingsToLocal.cpp
tools/getCameraParams/: generateCameraParams.m  matlab2opencv.m  stereoCalibParameters_360p.mat
tools/opencv-samples/: calib.sh
tools/opencv-samples/imagelist-creator/: CMakeLists.txt
tools/opencv-samples/stereo-calib/: CMakeLists.txt  stereo_calib.cpp
tools/opencv-samples/stereo-match/: CMakeLists.txt
